# batarang

./: README.md  pyproject.toml  requirements.txt  setup.cfg
batarang/: batarang.py  check_amis.py  database.py  guardduty.py  k8s.py  production_readiness.py  sechub.py
src/: batarang.py  check_amis.py  cloudcontrol.py  dump_csv.py  ebs.py  k8s.py  utils.py
