[build-system]
requires = ["setuptools>=62.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "batarang"
authors = [
    {name = "Dustin Whited", email = "dustin.whited@aquia.us"},
    {name = "James Elliiot", email = "jelliott@clarityinnovates.com"},
]
description = "It goes out and gets stuff and comes back"
requires-python = ">=3.7"
version = "2.0.0"

readme = "README.md"
dependencies = [
    "boto3>=1.26.146",
    "docopt>=0.6.2",
    "dohq_artifactory>=0.8.4",
    "kubernetes>=26.1.0",
    "pandas>=2.0.2",
    "xlsxwriter>=3.1.2",
]

[project.scripts]
batarang = "batarang.batarang:main"
