[metadata]
project_urls = 
    Bug Tracker = https://code.batcave.internal.cms.gov/batcave-watchtower/batarang/-/issues
    Source = https://code.batcave.internal.cms.gov/batcave-watchtower/batarang
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    batarang = src.batarang:main

[options.packages.find]
exclude =
    tests*
    my_package.tests*